Updated skills, squashed bugs

--- a/src/style.scss
+++ b/src/style.scss
@@ -56,7 +56,6 @@ html {
       &.main-icon {
         font-size : 130px;
         text-align: center;
-        display   : block;
         margin    : 40px auto 80px;
       }
 
